--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -61,7 +61,7 @@ h1, h2, h3, h4, h5, h6, p, span, li, ul, button, a{
   @apply text-[2rem] sm:text-5xl md:text-6xl xl:text-5xl 3xl:text-6xl 4xl:text-7xl font-quicksand font-bold leading-10 lg:leading-normal pb-2;
 }
 .heading-primary{
-  @apply  text-transparent bg-gradient-to-r from-secondary via-tertiary to-primary-300 bg-clip-text;
+  @apply  text-transparent bg-gradient-to-r from-secondary to-tertiary bg-clip-text;
 }
 
 /* Links and Paragraphs */
@@ -77,7 +77,7 @@ h1, h2, h3, h4, h5, h6, p, span, li, ul, button, a{
   @apply px-6 lg:px-6 py-2 lg:py-3.5 text-xs md:text-sm lg:text-base w-fit rounded-xl text-white bg-primary-100 hover:bg-primary-300 transition-all text-center lg:w-full;
 }
 .btn-one {
-  @apply px-4 py-2 lg:py-3.5 lg:px-8 text-xs md:text-sm lg:text-base text-white transition-all text-center w-fit rounded-full bg-primary-400 hover:bg-primary-300 font-semibold;
+  @apply px-4 py-2 lg:py-2.5 lg:px-6 text-xs md:text-sm lg:text-base text-white transition-all text-center w-fit rounded-full bg-primary-400 hover:bg-primary-300 font-semibold;
 }
 .btn-transparent {
   @apply px-12 lg:px-6 py-2 lg:py-3.5 text-xs md:text-sm lg:text-base rounded-xl hover:bg-primary-300 transition-all border-2 border-slate-200 hover:text-white w-fit text-center lg:w-full;
